--- a/Frontend/src/components/footer/Footer.css
+++ b/Frontend/src/components/footer/Footer.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 7%;
   align-items: center;
   gap: 50px;
 }
@@ -9,6 +10,9 @@
   display: flex;
   align-items: center;
   gap: 20px;
+}
+.footer-logo img {
+  height: 100px;
 }
 .footer-logo p {
   color: #383838;
