--- a/Frontend/src/components/items/Item.css
+++ b/Frontend/src/components/items/Item.css
@@ -25,3 +25,10 @@
   transform: scale(1.05);
   transition: 0.6s;
 }
+
+@media screen and (max-width: 1400px) {
+  .item  {
+    margin-left: auto ;
+    margin-right: auto;
+  }
+}
