--- a/Frontend/src/components/footer/Footer.css
+++ b/Frontend/src/components/footer/Footer.css
@@ -58,3 +58,23 @@
   height: 3px;
   background: #c7c7c7;
 }
+
+@media (max-width: 800px) {
+  .footer {
+    gap: 20px;
+  }
+  .footer-logo img {
+    width: 70px;
+    height: 40px;
+  }
+  .footer-links {
+    font-size: 15px;
+    gap: 10px;
+  }
+  .footer-social-icon img {
+    width: 22px;
+  }
+  .footer-copyright {
+    font-size: 13px;
+  }
+}
