--- a/Frontend/src/components/hero/Hero.css
+++ b/Frontend/src/components/hero/Hero.css
@@ -57,7 +57,7 @@
 .hero-right {
   flex: 1;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
 }
 
@@ -66,9 +66,33 @@
   height: 80%;
 }
 
-/* -------------------- */
-/* ✅ Responsive Breakpoints */
-/* -------------------- */
+
+
+@media (max-width: 1280px) {
+  .hero-left {
+    padding-left: 100px;
+  }
+
+  .hero-left h2{
+    font-size: 22px;
+  }
+
+  .hero-left p {
+    font-size: 60px;
+  }
+
+  .hero-hand-icon img {
+    width: 80px;
+  }
+
+  .hero-latest-btn {
+    width: 250px;
+    height: 60px;
+    gap: 10px;
+    margin-top: 20px;
+    font-size: 18px;
+  }
+}
 
 /* Tablets (≤1024px) */
 @media (max-width: 1024px) {
@@ -76,19 +100,27 @@
     padding-left: 80px;
   }
 
+  .hero-left h2{
+    font-size: 20px;
+  }
+
   .hero-left p {
-    font-size: 70px;
+    font-size: 60px;
+  }
+
+  .hero-hand-icon img {
+    width: 65px;
   }
 
   .hero-latest-btn {
-    width: 250px;
-    height: 60px;
-    font-size: 18px;
+    width: 220px;
+    height: 50px;
+    font-size: 16px;
   }
 }
 
 /* Mobile (≤768px) */
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .hero {
     flex-direction: column; /* stack vertically */
     height: auto;
@@ -121,6 +153,7 @@
 
   .hero-right {
     margin-top: 30px;
+    justify-content: center;
   }
 
   .hero-right img {
