--- a/Frontend/src/components/newCollection/NewCollection.css
+++ b/Frontend/src/components/newCollection/NewCollection.css
@@ -19,8 +19,47 @@
 }
 
 .collections {
-  display: grid;
+  display: grid; 
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-top: 50px;
   gap: 30px;
+}
+
+@media (max-width: 1024px) {
+  .new-collections {
+    height: auto;
+  }
+  .new-collections h1 {
+    font-size: 30px;
+  }
+  .new-collections hr {
+    width: 120px;
+    height: 3px;
+  }
+  .collections {
+    margin-top: 20px;
+    gap: 15px;
+  }
+}
+
+@media (max-width: 800px) {
+  .new-collections h1 {
+    font-size: 20px;
+  }
+  .new-collections hr {
+    width: 100px;
+  }
+  .collections {
+    grid-template-columns: repeat(3,1fr);
+    gap: 15px;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .collections{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+  }
 }
