--- a/Frontend/src/components/relatedproducts/RelatedProducts.css
+++ b/Frontend/src/components/relatedproducts/RelatedProducts.css
@@ -21,3 +21,45 @@
   display: flex;
   gap: 30px;
 }
+
+@media (max-width: 1024px) {
+  .relatedproducts {
+    height: auto;
+  }
+  .relatedproducts h1 {
+    font-size: 30px;
+  }
+  .relatedproducts hr {
+    width: 120px;
+    height: 3px;
+  }
+  .relatedproducts-item {
+    margin-top: 20px;
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+}
+
+@media (max-width: 800px) {
+  .relatedproducts h1 {
+    font-size: 20px;
+  }
+  .relatedproducts hr {
+    width: 100px;
+  }
+  .relatedproducts-item {
+    gap: 15px;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .relatedproducts h1 {
+    font-size: 20px;
+  }
+  .relatedproducts-item {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+  }
+}
