--- a/Frontend/src/pages/css/ShopCategory.css
+++ b/Frontend/src/pages/css/ShopCategory.css
@@ -1,6 +1,3 @@
-.shop-category {
-  overflow-x: hidden;
-}
 
 .shopcategory-banner {
   display: block;
@@ -47,18 +44,58 @@
 
 @media screen and (max-width: 1500px) {
   .shopcategory-products {
-    grid-template-columns: repeat(3, 1fr);
+    width: 90%;
+    margin: 10px auto;
+    
+  }
+  .shopcategory-banner {
+    margin: 20px auto;
+    width: 90%;
+  }
+  .shopcategory-indexSort{
+    width: 90%;
+    margin: auto;
+  }
+  .shopcategory-sort{
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+  .shopcategory-indexSort p {
+    font-size: 12px;
+  }
+  .shopcategory-products .item{
+    margin: auto;
+  }
+  .shopcategory-loadmore {
+    margin: 100px auto;
+    width: 200px;
+    height: 60px;
+    font-size: 16px;
   }
 }
 
-@media screen and (max-width: 1200px) {
+
+@media screen and (max-width: 800px) {
   .shopcategory-products {
-    grid-template-columns: repeat(2, 1fr);
+    width: 95%;
+  }
+  .shopcategory-banner {
+    width: 95%;
+  }
+  .shopcategory-loadmore{
+    margin: 60px auto;
+    width: 150px;
+    height: 40px;
+  }
+  .shopcategory-indexSort{
+    width: 90%;
+    margin: auto;
   }
 }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 500px) {
   .shopcategory-products {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2,1fr);
   }
+  
 }
