--- a/Admin/src/components/listProduct/Listproduct.css
+++ b/Admin/src/components/listProduct/Listproduct.css
@@ -10,6 +10,11 @@
   background: white;
 }
 
+.listproduct-allproducts {
+  width: 100%;
+  overflow-y: auto;
+}
+
 .listproduct-format-main {
   display: grid;
   grid-template-columns: 1fr 3fr repeat(4, 1fr);
@@ -19,4 +24,34 @@
   color: #454545;
   font-size: 15px;
   font-weight: 600;
+}
+
+.list-format {
+  align-items: center;
+  font-weight: 500;
+}
+.listproduct-producticon {
+  height: 80px;
+}
+.listproduct-remove-icon{
+  cursor: pointer;
+  margin: auto;
+}
+
+@media (max-width: 800px) {
+  .list-product {
+    box-sizing: border-box;
+    width: auto;
+    height: 100%;
+    padding: 10px 30px;
+    margin: 20px auto;
+  }
+  .listproduct-format-main{
+    padding: 15px 0;
+    color: #454545;
+    font-size: 12px;
+  }
+  .listproduct-producticon {
+    height: 60px;
+  }
 }
