--- a/Frontend/src/pages/css/LoginSignup.css
+++ b/Frontend/src/pages/css/LoginSignup.css
@@ -60,6 +60,11 @@
   font-weight: 500;
 }
 
+.error {
+  font-size: 12px;
+  color: red;
+}
+
 @media (max-width: 1280px) {
   .loginsignup {
     padding-top: 50px;
