--- a/Frontend/src/components/admin/addProducts/Addproduct.css
+++ b/Frontend/src/components/admin/addProducts/Addproduct.css
@@ -14,6 +14,12 @@
   color: #7b7b7b;
 }
 
+.addproduct-itemfield-category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .addproduct-itemfield input {
   box-sizing: border-box;
   width: 100%;
@@ -22,7 +28,7 @@
   padding-left: 15px;
   border: 1px solid #c3c3c3;
   outline: none;
-  color:#7b7b7b;
+  color: #7b7b7b;
   font-family: 'Poppins';
   font-size: 14px;
 }
@@ -48,7 +54,7 @@
   object-fit: contain;
 }
 
-.addproduct-thumnail-label{
+.addproduct-thumnail-label {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -78,7 +84,7 @@
 }
 
 @media (max-width: 800px) {
-  .add-product{
+  .add-product {
     width: auto;
     padding: 30px;
     margin: 20px;
