--- a/Frontend/src/components/navbar/Navbar.css
+++ b/Frontend/src/components/navbar/Navbar.css
@@ -65,7 +65,7 @@
   gap: 45px;
 }
 
-.nav-login-cart button {
+/* .nav-login-cart button {
   width: 157px;
   height: 58px;
   outline: none;
@@ -76,7 +76,7 @@
   font-weight: 500;
   background: white;
   cursor: pointer;
-}
+} */
 
 .nav-login-cart button:active {
   background: #f3f3f3;
