--- a/Frontend/src/components/admin/sidebar/Sidebar.css
+++ b/Frontend/src/components/admin/sidebar/Sidebar.css
@@ -22,6 +22,10 @@
   cursor: pointer;
 }
 
+.sidebar-item i {
+  font-size: 25px;
+}
+
 @media (max-width: 800px) {
   .sidebar {
     padding: 30px 0px;
