--- a/Frontend/src/components/orders/orderdetails/OrderDetails.css
+++ b/Frontend/src/components/orders/orderdetails/OrderDetails.css
@@ -1,6 +1,5 @@
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
+.main-container {
+  margin: 0 10% 0 10%;
   padding: 20px;
   font-family: Arial, sans-serif;
   color: #222;
